k8s/manifest/simulator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simulator
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simulator
  template:
    metadata:
      labels:
        app: simulator
    spec:
      containers:
      - name: simulator
        image: iso8583-simulator:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8084
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
