k8s/manifest/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service
  namespace: default
spec:
  selector:
    app: client
  ports:
  - name: http
    port: 8081
    targetPort: 8081
    protocol: TCP
  type: ClusterIP
