k8s/manifest/console-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: console-service
  namespace: default
spec:
  selector:
    app: console
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
