k8s/manifest/server-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: server-service-headless
  labels:
    app: server-service-headless
spec:
  clusterIP: None
  selector:
    app: server
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: iso8583
      protocol: TCP
      port: 8583
      targetPort: 8583
    - name: grpc
      protocol: TCP
      port: 9090
      targetPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: server-service
  labels:
    app: server-service
spec:
  type: ClusterIP
  selector:
    app: server
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: iso8583
      protocol: TCP
      port: 8583
      targetPort: 8583
    - name: grpc
      protocol: TCP
      port: 9090
      targetPort: 9090
